2005-01-26  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomevfs/gnome-vfs-monitor.c: (destroy_monitor_handle):
	Fix a typo in a g_warning.

2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-vfs 2.9.90 ===

2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* test/test-uri.c (main):
	Fix test

	* NEWS:
	Update for release.

	* configure.in: 
	Bump version to 2.9.90
	
2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c (copy_directory):
	Support setgid directories.
	Patch from Sjoerd Simons <sjoerd@luon.net>

2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* modules/smb-method.c:
	Cache passwords on a per-server level, not per-share.
	Patch from Nate	Nielsen <nielsen@memberwebs.com>

2005-01-24  Nate Nielsen <nielsen@memberwebs.com>

	* modules/smb-method.c: (try_init) Use new flag for supressing automatic
	guest login. See: https://bugzilla.samba.org/show_bug.cgi?id=2092#c5
	
2005-01-18  Alexander Larsson  <alexl@redhat.com>

	* daemon/gnome-vfs-daemon.c: (main):
	Create volume monitor early to avoid possible deadlock later (#161997)

2005-01-16 Paolo Borelli <pborelli@katamail.com> 

	* modules/sftp-method.c: always check gnome_vfs_unescape_string
	return value.

2005-01-15  Nate Nielsen <nielsen@memberwebs.com>

	* modules/smb-method.c (add_cached_server), (initial_authentication)
	(prompt_authentication):
	Fix problems with user/domain contained in smb uri. (see #132933)	
	
	Patch from Narayana Pattipati  <narayana.pattipati@wipro.com>

2005-01-12  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Check for posix_fadvice
	
	* libgnomevfs/gnome-vfs-handle-private.h:
	* libgnomevfs/gnome-vfs-handle.c: (_gnome_vfs_handle_forget_cache):
	* libgnomevfs/gnome-vfs-method.h:
	* libgnomevfs/gnome-vfs-ops.c: (gnome_vfs_forget_cache):
	* libgnomevfs/gnome-vfs-private-utils.h:
	Add _gnome_vfs_handle_forget_cache
	
	* libgnomevfs/gnome-vfs-xfer.c: (copy_file_data),